# CLion-SDL2-first-window

./: CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
